mir (0.7.4-0ubuntu1) UNRELEASED; urgency=medium

  * New upstream release 0.7.4 (https://launchpad.net/mir/+milestone/0.7.4)
    - Bug fixes
      . Fix jerky/stuttering event delivery that could happen inside
        nested servers sometimes (LP: #1372300)
    - Enhancement
      . Reduced touch input lag slightly for 60Hz displays.

 -- Daniel van Vugt <daniel.van.vugt@canonical.com>  Thu, 25 Sep 2014 16:18:10 +0800

mir (0.7.3+14.10.20140918.1-0ubuntu1) utopic; urgency=medium

  [ Andreas Pokorny ]
  * New upstream release 0.7.3 (https://launchpad.net/mir/+milestone/0.7.3)
    - Bug fixes
      . Fix constructor syntax errors (LP: #1369389)
      . server: Workaround for unresponsive clients causing the server to hang 
        (LP: #1350207)
      . Relax strict dependencies of graphics drivers on an exact version
        of the libmirplatform2 package. It's blocking CI. (LP: #1370866)
      . Update cmake scripts to current version of gcovr.

  [ Ubuntu daily release ]
  * New rebuild forced

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Thu, 18 Sep 2014 14:54:51 +0000

mir (0.7.2+14.10.20140912-0ubuntu1) utopic; urgency=medium

  [ Alexandros Frantzis ]
  * New upstream release 0.7.2 (https://launchpad.net/mir/+milestone/0.7.2)
    - Bug fixes
      . Restore support for gcc-4.8/trusty (LP: #1366134)

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Fri, 12 Sep 2014 09:07:49 +0000

mir (0.7.1+14.10.20140909.1-0ubuntu1) utopic; urgency=medium

  [ Alberto Aguirre ]
  * New upstream release 0.7.1 (https://launchpad.net/mir/+milestone/0.7.1)
    - Bug fixes
      . Recycle compositor threads by using a thread pool (LP: #1362841) 

 -- Ubuntu daily release <ps-jenkins@lists.canonical.com>  Tue, 09 Sep 2014 18:28:01 +0000

mir (0.7.0+14.10.20140829-0ubuntu1) utopic; urgency=medium

  [ Daniel van Vugt ]
  * New upstream release 0.7.0 (https://launchpad.net/mir/+milestone/0.7.0)
    - Enhancements: